--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ *{
+   margin:0;
+   padding:0;
+   box-sizing: border-box;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+ }
+#root{
+height: 100vh;
 }
+ .layout{
+   display: grid;
+   grid-template-areas: "header" "main" "footer";
+   height: 100%;
+   grid-template-rows: 80px 1fr 80px;
+ }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+
+ main{
+   grid-area:main;
+  }
+
+  footer{
+    grid-area: footer;
+
+    background-color: #2a5ea5;
+    color: #555;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+
+  }
+
