--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -22,3 +22,15 @@ height: 100vh;
 
  
 
+.wrapper{
+  padding: 30px;
+  display:flex;
+  justify-content: space-between;
+}
+.wrapper .product-wrapper{
+  width:  68%;
+}
+
+.wrapper .filter-wrapper{
+  width:  30%;
+}
