--- a/Client/src/Components/Cart/Cart.scss
+++ b/Client/src/Components/Cart/Cart.scss
@@ -24,7 +24,21 @@
         justify-content: space-between;
         align-items: center;
         flex: 1;
-     } button{
+     } 
+     
+    
+     }
+   
+     .cart-footer{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 30px 0;
+
+        .cart-total{
+            font-size:25px ;
+        }
+     button{
         display: inline-block;
          
         border: 0px;
@@ -35,4 +49,7 @@
 
 
     }
+
+   
  }
+ 
