--- a/Client/src/css/Cart/Cart.css
+++ b/Client/src/css/Cart/Cart.css
@@ -24,7 +24,17 @@
   align-items: center;
   flex: 1;
 }
-.cart-item button {
+
+.cart-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+}
+.cart-footer .cart-total {
+  font-size: 25px;
+}
+.cart-footer button {
   display: inline-block;
   border: 0px;
   background: #2a5ea5;
